--- a/Draw/ZhaJinHua/View/MoneyTreeView~ipad.xib
+++ b/Draw/ZhaJinHua/View/MoneyTreeView~ipad.xib
@@ -33,88 +33,21 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
-			<object class="IBUIView" id="590180251">
+			<object class="IBUIView" id="6569895">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="152709336">
-						<reference key="NSNextResponder" ref="590180251"/>
+					<object class="IBUIButton" id="969646497">
+						<reference key="NSNextResponder" ref="6569895"/>
 						<int key="NSvFlags">319</int>
-						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="433040819">
-								<reference key="NSNextResponder" ref="152709336"/>
-								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{94, 44}</string>
-								<reference key="NSSuperview" ref="152709336"/>
-								<reference key="NSNextKeyView" ref="584271530"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">zjh_money_tree_popMessage_background@2x.png</string>
-								</object>
-							</object>
-							<object class="IBUILabel" id="584271530">
-								<reference key="NSNextResponder" ref="152709336"/>
-								<int key="NSvFlags">319</int>
-								<string key="NSFrameSize">{94, 44}</string>
-								<reference key="NSSuperview" ref="152709336"/>
-								<reference key="NSNextKeyView" ref="823765092"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
-								</object>
-								<object class="NSColor" key="IBUIHighlightedColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
-								</object>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<int key="IBUINumberOfLines">3</int>
-								<int key="IBUITextAlignment">1</int>
-								<int key="IBUILineBreakMode">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
-									<double key="pointSize">18</double>
-								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">18</double>
-									<int key="NSfFlags">16</int>
-								</object>
-								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-								<double key="preferredMaxLayoutWidth">94</double>
-							</object>
-						</array>
-						<string key="NSFrame">{{16, 0}, {94, 44}}</string>
-						<reference key="NSSuperview" ref="590180251"/>
-						<reference key="NSNextKeyView" ref="433040819"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="499786703">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MCAwAA</bytes>
-						</object>
-						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-					</object>
-					<object class="IBUIButton" id="823765092">
-						<reference key="NSNextResponder" ref="590180251"/>
-						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{18, 60}, {88, 104}}</string>
-						<reference key="NSSuperview" ref="590180251"/>
-						<reference key="NSNextKeyView"/>
+						<string key="NSFrame">{{18, 12}, {88, 104}}</string>
+						<reference key="NSSuperview" ref="6569895"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<object class="NSColor" key="IBUIHighlightedTitleColor">
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="930794174">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -136,12 +69,75 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
+					<object class="IBUIView" id="599738123">
+						<reference key="NSNextResponder" ref="6569895"/>
+						<int key="NSvFlags">319</int>
+						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUIImageView" id="1063540864">
+								<reference key="NSNextResponder" ref="599738123"/>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrameSize">{94, 44}</string>
+								<reference key="NSSuperview" ref="599738123"/>
+								<reference key="NSNextKeyView" ref="219515948"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">zjh_money_tree_popMessage_background@2x.png</string>
+								</object>
+							</object>
+							<object class="IBUILabel" id="219515948">
+								<reference key="NSNextResponder" ref="599738123"/>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrameSize">{94, 44}</string>
+								<reference key="NSSuperview" ref="599738123"/>
+								<reference key="NSNextKeyView" ref="969646497"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<string key="IBUIText">Label</string>
+								<reference key="IBUITextColor" ref="930794174"/>
+								<object class="NSColor" key="IBUIHighlightedColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
+								</object>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUINumberOfLines">3</int>
+								<int key="IBUITextAlignment">1</int>
+								<int key="IBUILineBreakMode">0</int>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<int key="type">1</int>
+									<double key="pointSize">18</double>
+								</object>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">18</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<double key="preferredMaxLayoutWidth">94</double>
+							</object>
+						</array>
+						<string key="NSFrame">{{15, 0}, {94, 44}}</string>
+						<reference key="NSSuperview" ref="6569895"/>
+						<reference key="NSNextKeyView" ref="1063540864"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor" id="702820375">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MCAwAA</bytes>
+						</object>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+					</object>
 				</array>
-				<string key="NSFrameSize">{124, 176}</string>
+				<string key="NSFrameSize">{124, 116}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="152709336"/>
+				<reference key="NSNextKeyView" ref="599738123"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<reference key="IBUIBackgroundColor" ref="499786703"/>
+				<reference key="IBUIBackgroundColor" ref="702820375"/>
 				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
 					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
 					<string key="IBUIDisplayName">Freeform</string>
@@ -154,34 +150,34 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">moneyTree</string>
-						<reference key="source" ref="590180251"/>
-						<reference key="destination" ref="823765092"/>
+						<reference key="source" ref="6569895"/>
+						<reference key="destination" ref="969646497"/>
 					</object>
-					<int key="connectionID">8</int>
+					<int key="connectionID">17</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">popMessageBody</string>
-						<reference key="source" ref="590180251"/>
-						<reference key="destination" ref="152709336"/>
+						<reference key="source" ref="6569895"/>
+						<reference key="destination" ref="599738123"/>
 					</object>
-					<int key="connectionID">9</int>
+					<int key="connectionID">18</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">popMessageLabel</string>
-						<reference key="source" ref="590180251"/>
-						<reference key="destination" ref="584271530"/>
+						<reference key="source" ref="6569895"/>
+						<reference key="destination" ref="219515948"/>
 					</object>
-					<int key="connectionID">10</int>
+					<int key="connectionID">19</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">popMessageBackgroundImageView</string>
-						<reference key="source" ref="590180251"/>
-						<reference key="destination" ref="433040819"/>
+						<reference key="source" ref="6569895"/>
+						<reference key="destination" ref="1063540864"/>
 					</object>
-					<int key="connectionID">11</int>
+					<int key="connectionID">20</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -204,37 +200,37 @@
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">3</int>
-						<reference key="object" ref="590180251"/>
+						<int key="objectID">12</int>
+						<reference key="object" ref="6569895"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="152709336"/>
-							<reference ref="823765092"/>
+							<reference ref="969646497"/>
+							<reference ref="599738123"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">4</int>
-						<reference key="object" ref="152709336"/>
+						<int key="objectID">13</int>
+						<reference key="object" ref="599738123"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="433040819"/>
-							<reference ref="584271530"/>
+							<reference ref="1063540864"/>
+							<reference ref="219515948"/>
 						</array>
-						<reference key="parent" ref="590180251"/>
+						<reference key="parent" ref="6569895"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="823765092"/>
-						<reference key="parent" ref="590180251"/>
+						<int key="objectID">14</int>
+						<reference key="object" ref="969646497"/>
+						<reference key="parent" ref="6569895"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">6</int>
-						<reference key="object" ref="433040819"/>
-						<reference key="parent" ref="152709336"/>
+						<int key="objectID">15</int>
+						<reference key="object" ref="1063540864"/>
+						<reference key="parent" ref="599738123"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">7</int>
-						<reference key="object" ref="584271530"/>
-						<reference key="parent" ref="152709336"/>
+						<int key="objectID">16</int>
+						<reference key="object" ref="219515948"/>
+						<reference key="parent" ref="599738123"/>
 					</object>
 				</array>
 			</object>
@@ -242,19 +238,19 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="3.CustomClassName">MoneyTreeView</string>
-				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="5.CustomClassName">MoneyTree</string>
-				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="12.CustomClassName">MoneyTreeView</string>
+				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="14.CustomClassName">MoneyTree</string>
+				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">11</int>
+			<int key="maxID">20</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
